--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
         "build-excursion-free-seats-prod": "cd nova-components/ExcursionFreeSeats && npm run prod"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.2.1",
+        "alpinejs": "^2.7.3",
+        "autoprefixer": "^10.1.0",
         "axios": "^0.21",
         "deepmerge": "^4.2.2",
         "fibers": "^5.0.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.2.1",
+        "postcss-import": "^12.0.1",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.36.0",
         "sass-loader": "^12.1.0",
+        "tailwindcss": "^2.0.2",
         "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.14"
     },
