--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,12 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+BOOKER_SUBDOMAIN="booker.petar-booking.test"
+SUPERADMIN_NAME="Osam Marketing"
+SUPERADMIN_EMAIL="qzman16@gmail.com"
+SUPERADMIN_PASSOWRD="12345678"
+ADMIN_NAME="Ognjen Kuzmanović"
+ADMIN_EMAIL="16minus8@gmail.com"
+ADMIN_PASSOWRD="12345678"
+SEED_ALL=1
