--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+/nova-components/ExcursionFreeSeats/node_modules
+/nova-components/ExcursionRecapitulation/node_modules
